updatinf the stylesheet to reflect name changes

--- a/mountains/mountains.css
+++ b/mountains/mountains.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fenix&display=swap");
 
-.mountain {
+.select-mountain {
     background-color: rgb(6, 6, 136);
     border: none;
     color: white;
